Prevent misaligned thread row button
The misalignment was caused by the thread row button being taller than
its parent container. The solution is to ensure both elements have the
same height.

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -588,6 +588,10 @@ body.inboxsdk__gmailv1css .inboxsdk__thread_row_label .inboxsdk__button_icon {
   padding: 0px;
 }
 
+.inboxsdk__thread_row_button .inboxsdk__button_icon {
+  max-height: 100%;
+}
+
 body:not(.inboxsdk__gmailv1css) .inboxsdk__thread_row_custom_date_container {
   max-width: inherit;
 }
